# an-RPG-game

./: CMakeLists.txt  README.md  game  main.cpp  run.sh  tasks.txt
include/: colors.h  enemy.h  entity.h  player.h
src/: enemy.cpp  player.cpp
